# Hourly-Divvy-Trip-Predictor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  conda.yml  pyproject.toml
.github/workflows/: backfill_features.yml  backfill_predictions.yml
data/: registry.db
data/geographical/mixed_indexer/: end_geodataframe.parquet  end_ids_and_names.json  end_reverse_geocoding.json  start_geodataframe.parquet  start_ids_and_names.json  start_reverse_geocoding.json
feast/feature_repo/: example_repo.py
feature_store/feature_repo/: backfill_feature_store.py  example_repo.py  feature_store.yaml
models/: best_end_model.txt  best_start_model.txt
models/comet_downloads/: tuned_xgboost_for_ends  tuned_xgboost_for_starts
models/local_saves/: Lasso (Tuned for ends).pkl  Lasso (Tuned for starts).pkl  Lightgbm (Tuned for ends).pkl  Lightgbm (Tuned for starts).pkl  Lightgbm (Untuned for ends).pkl  Lightgbm (Untuned for starts).pkl  Xgboost (Tuned for ends).pkl  Xgboost (Tuned for starts).pkl  tuned_lasso_for_ends  tuned_lasso_for_starts  tuned_lightgbm_for_ends  tuned_lightgbm_for_starts  tuned_xgboost_for_ends  tuned_xgboost_for_starts  untuned_lasso_for_ends  untuned_lasso_for_starts  untuned_lightgbm_for_ends  untuned_lightgbm_for_starts  untuned_xgboost_for_ends  untuned_xgboost_for_starts
src/: monitoring.py
src/feature_pipeline/: data_extraction.py  data_sourcing.py  feature_engineering.py  mixed_indexer.py  preprocessing.py  timing.py
src/setup/: config.py  paths.py
src/training_pipeline/: cleanup.py  hyperparameter_tuning.py  models.py  training.py
(+31 files in other folders)
